Stop duplicate bug due to async support, Fix watched logo shifting rows

--- a/Streamer/client-src/src/routes/show/style.css
+++ b/Streamer/client-src/src/routes/show/style.css
@@ -63,5 +63,6 @@
 
 .watched {
     /* font-size: 1em !important; */
-    transform: scale(0.5) translateY(70%);
+    transform: scale(0.5) translateY(1em);
+    height: 0em;
 }
